fix: supported shift+enter command on macOS

--- a/lab5/styles/styles.scss
+++ b/lab5/styles/styles.scss
@@ -34,7 +34,7 @@ p, input {
   white-space: pre-wrap;
   word-wrap: break-word;
   margin: 0 0 12px;
-  font-family: CustomSerif, Georgia, Cambria, 'Times New Roman', serif!important;
+  //font-family: CustomSerif, Georgia, Cambria, 'Times New Roman', serif!important;
 
   & :focus {
     outline: none;
